--- a/index.html
+++ b/index.html
@@ -10,13 +10,9 @@
     <p>Computer related:</p>
     <p>Comments:</p>
     <p>
-        <a href='License.txt'>License: read it before you want use any materials on this website</a>
+        <a href='license.txt'>License: read it before using any materials on this website</a>
     </p>
     <p>You can communicate with me through issue tracker.</p>
 </body>
-<font color="red">
-    <h1></h1>
-</font>
-
 
 </html>
